--- a/file_upload/package.json
+++ b/file_upload/package.json
@@ -9,15 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "date-format": "^3.0.0",
+    "destination": "0.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "module": "^1.2.5",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.12",
-    "prompt-password": "^1.2.0",
+    "multer": "^1.4.2",
     "pug": "^3.0.2"
   }
 }
